# simple_ppe_algo

./: CMakeLists.txt  README.md  package.xml
include/handeye_target/: handeyeTarget.hpp  handeyeTargetConfig.hpp
src/: handeyeTarget.cpp
test/: handeyeTargetTest.cpp
test/Pnp_accuracy_test_data/2/: 2.ply
